- updating requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,27 @@
-Bottleneck==1.2.1
+asn1crypto==0.24.0
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
+conda==4.5.4
+cryptography==2.2.2
 future==0.16.0
 idna==2.6
-numexpr==2.6.5
-numpy==1.14.4
+menuinst==1.4.14
+mkl-fft==1.0.0
+mkl-random==1.0.1
+numpy==1.14.3
 pandas==0.23.0
+pycosat==0.6.3
+pycparser==2.18
+pyOpenSSL==18.0.0
+PySocks==1.6.8
 python-dateutil==2.7.3
 pytz==2018.4
+pywin32==223
 requests==2.18.4
+ruamel-yaml==0.15.37
 six==1.11.0
 sodapy==1.4.6
 urllib3==1.22
+win-inet-pton==1.0.1
+wincertstore==0.2
